--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,11 @@
   to = "/admin/"
   status = 301
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 # Netlify Forms handling; honeypot field named 'bot-field'
 [[headers]]
   for = "/**"
