--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,11 @@
   status = 301
 
 [[redirects]]
+  from = "/admin/*"
+  to = "/admin/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
