--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: assassinaj602/Personal-portfolio
   branch: main
-  base_url: "/"                 # served from same origin
+  base_url: "https://portfolio-muhammad-assadullah.netlify.app"
   auth_endpoint: "/.netlify/functions/gh-auth"
 
 media_folder: "public/images"
